# rgnn-lecture

./: .gitignore  pyproject.toml  template.tex
exercisesheet01/: task3.md  template.tex
exercisesheet01/PyTorch-FeedForward/: main.py  net.py  optimizer.py  test_gradients.py
exercisesheet01/Python-FeedForward/: main.py  net.py
exercisesheet02/: discussion.md  template.tex
exercisesheet02/TimeSeries/: main.py  net.py  net_solution.py
exercisesheet02/VisionTransformer/config/: vit.json
exercisesheet02/VisionTransformer/nn/: attention.py
exercisesheet03/: submission.tex
exercisesheet03/ex01/: findings.md
exercisesheet03/ex01/data/: data_preparation.py
exercisesheet03/ex01/utils/: datasets.py  helper_functions.py
exercisesheet03/ex02/: environment_setup.txt  main.py  model.py  solver.py
exercisesheet04/: README.md  pyproject_unused.toml
exercisesheet05/: environment.yml  submission.tex
exercisesheet05/LatentDiffusion/: train-denoiser.sbatch  train-denoiser.sh  train-vae.sbatch  train-vae.sh
exercisesheet05/LatentDiffusion/config/: ffhq-beta-vae.json  ffhq-denoiser.json
exercisesheet05/LatentDiffusion/data/: lightning_ffhq.py
exercisesheet05/LatentDiffusion/diffusion-samples/: collage.py
exercisesheet05/LatentDiffusion/model/: base.py  main.py
exercisesheet05/LatentDiffusion/nn/: convnext.py  downscale.py  patch_gan.py
exercisesheet06/: environment.yml  findings.md
exercisesheet06/CEM/: models.py  my_rendering.py  planners.py  run.py  simple_control_env.py
exercisesheet06/Loci/: eval.sh  readme.md  readme_demo.md
(+195 files in other folders)
