[tool.poetry]
name = "rgnn-lecture"
version = "0.1.0"
description = ""
authors = ["bileamScheuvens <benedictbileam@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
torch = "^2.5.0"
pyqt6 = "^6.7.1"
pytorch-lightning = "^2.4.0"
mkl = "^2025.0.0"
jsmin = "^3.0.1"
torchvision = "^0.20.1"
einops = "^0.8.0"
h5py = "^3.12.1"
netcdf4 = "^1.7.2"
xarray = "^2024.10.0"
hydra-core = "^1.3.2"
tensorboard = "^2.18.0"
scipy = "^1.14.1"
dask = "^2024.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
